ensure buttons are readable and add a new small modifier

--- a/src/css/sass/_mixins.scss
+++ b/src/css/sass/_mixins.scss
@@ -49,6 +49,14 @@
 	&.ghost {
 
 		background: white;
+		color: black;
+
+	}
+
+	&.small {
+
+		@include modular-scale( eta );
+		padding: ( $grid-line-height / 3 ) ( $grid-gutter / 3 );
 
 	}
 
